[gd_scene load_steps=6 format=3 uid="uid://cp03ipnmdilvc"]

[ext_resource type="Script" uid="uid://b4fh0681wvsay" path="res://screpst/plaery.gd" id="1_ky58a"]
[ext_resource type="Texture2D" uid="uid://lpuvpesf5o6r" path="res://asets/0403cb056e666f0e9da1c9fa45526158.png" id="2_5oqur"]
[ext_resource type="Texture2D" uid="uid://br82etvh4y1rv" path="res://asets/0403cb056e666f0e9da1c9fa45526158 (1).png" id="3_6efyc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6j22j"]
radius = 14.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5oqur"]
radius = 18.0

[node name="plaery" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_ky58a")

[node name="body" type="Sprite2D" parent="."]
position = Vector2(-1.1920929e-07, 0)
scale = Vector2(0.11116236, 0.12962961)
texture = ExtResource("2_5oqur")

[node name="gun" type="Sprite2D" parent="body"]
position = Vector2(71, 29)
texture = ExtResource("3_6efyc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6j22j")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5oqur")

[node name="cameraRemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="shootRayCast2D" type="RayCast2D" parent="."]
position = Vector2(23, 4)
target_position = Vector2(500, 0)
collision_mask = 9
collide_with_areas = true

[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
